flux/blog/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blog
  labels:
    waypoint-for: all
    istio.io/use-waypoint: shared-waypoint
    istio.io/use-waypoint-namespace: istio-system
