flux/blog/authpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
 name: allow
 namespace: blog
spec:
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/istio-system/sa/ingress-gateway
    - source:
        namespaces:
        - blog
